@@ -120,6 +120,7 @@ static MoonlightRuntimeOption options [] = {
 	{ RUNTIME_INIT_ALL_IMAGE_FORMATS,     "allimages",         "yes",        "no" },
 	{ RUNTIME_INIT_EMULATE_KEYCODES,      "emulatekeycodes",   "yes",        "no",     true,            "Emulate Windows PlatformKeyCodes" },
 	{ RUNTIME_INIT_ENABLE_EFFECTS,        "effects",           "yes",        "no",     true,            "Enable Pixel Effects" },
+	{ RUNTIME_INIT_ENABLE_PROJECTIONS,    "projections",       "yes",        "no",     true,            "Enable Perspective Transformations" },
 	{ RUNTIME_INIT_CURL_BRIDGE,           "curlbridge",        "yes",        "no",     true,            "Prefer Curl bridge" },
 	{ RUNTIME_INIT_ENABLE_TOGGLEREFS,     "togglerefs",        "yes",        "no" },
 	{ RUNTIME_INIT_OOB_LAUNCHER_FIREFOX,  "ooblauncher",       "firefox",    "default" , true,          "Use firefox to execute out-of-browser applications" },
@@ -164,8 +165,8 @@ moonlight_get_runtime_option (RuntimeInitFlag flag)
 	return moonlight_flags & flag;
 }
 
-#define RUNTIME_INIT_DESKTOP (RuntimeInitFlag)(RUNTIME_INIT_OCCLUSION_CULLING | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ALL_IMAGE_FORMATS | RUNTIME_INIT_DESKTOP_EXTENSIONS | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
-#define RUNTIME_INIT_BROWSER (RuntimeInitFlag)(RUNTIME_INIT_OCCLUSION_CULLING | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_ALLOW_WINDOWLESS | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ENABLE_MS_CODECS | RUNTIME_INIT_CREATE_ROOT_DOMAIN | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
+#define RUNTIME_INIT_DESKTOP (RuntimeInitFlag)(RUNTIME_INIT_OCCLUSION_CULLING | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ALL_IMAGE_FORMATS | RUNTIME_INIT_DESKTOP_EXTENSIONS | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_PROJECTIONS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
+#define RUNTIME_INIT_BROWSER (RuntimeInitFlag)(RUNTIME_INIT_OCCLUSION_CULLING | RUNTIME_INIT_USE_UPDATE_POSITION | RUNTIME_INIT_USE_SHAPE_CACHE | RUNTIME_INIT_ALLOW_WINDOWLESS | RUNTIME_INIT_USE_IDLE_HINT | RUNTIME_INIT_USE_BACKEND_IMAGE | RUNTIME_INIT_ENABLE_MS_CODECS | RUNTIME_INIT_CREATE_ROOT_DOMAIN | RUNTIME_INIT_ENABLE_EFFECTS | RUNTIME_INIT_ENABLE_PROJECTIONS | RUNTIME_INIT_ENABLE_TOGGLEREFS )
 
 #if DEBUG || LOGGING
 static struct MoonlightDebugOption debugs[] = {
@@ -511,6 +512,7 @@ Surface::SetRuntimeOption (RuntimeInitFlag flag, bool value)
 	// FIXME: these flags just modify the global settings, but
 	// many shouldn't
 	case RUNTIME_INIT_ENABLE_EFFECTS:
+	case RUNTIME_INIT_ENABLE_PROJECTIONS:
 	case RUNTIME_INIT_SHOW_CACHE_SIZE:
 	case RUNTIME_INIT_SHOW_CLIPPING:
 	case RUNTIME_INIT_SHOW_BOUNDING_BOXES:
