@@ -80,9 +80,10 @@ enum RuntimeInitFlag {
 	RUNTIME_INIT_CREATE_ROOT_DOMAIN    = 1 << 24,
 	RUNTIME_INIT_DESKTOP_EXTENSIONS    = 1 << 25,
 	RUNTIME_INIT_ENABLE_EFFECTS        = 1 << 26,
-	RUNTIME_INIT_CURL_BRIDGE	   = 1 << 27,
-	RUNTIME_INIT_ENABLE_TOGGLEREFS	   = 1 << 28,
-	RUNTIME_INIT_OOB_LAUNCHER_FIREFOX  = 1 << 29,
+	RUNTIME_INIT_ENABLE_PROJECTIONS    = 1 << 27,
+	RUNTIME_INIT_CURL_BRIDGE	   = 1 << 28,
+	RUNTIME_INIT_ENABLE_TOGGLEREFS	   = 1 << 29,
+	RUNTIME_INIT_OOB_LAUNCHER_FIREFOX  = 1 << 30,
 };
 
 struct MoonlightRuntimeOption {
